@@ -7,6 +7,7 @@
 /*     */ import java.io.OutputStreamWriter;
 /*     */ import java.net.HttpURLConnection;
 /*     */ import java.net.URL;
+import java.nio.file.Paths;
 /*     */ import java.util.ArrayList;
 
 import org.voicerss.tts.Speech.SpeechDataEvent;
@@ -93,7 +94,8 @@ private <T> void handleSpeechData(T data) {
 public <T> T speech(VoiceParameters params) throws Exception {
 /*  87 */     validate(params);
 /*     */     
-/*  89 */     URL url = new URL(String.valueOf(this._ssl.booleanValue() ? "https" : "http") + "://api.voicerss.org/");
+/*  89 */     
+              URL url = Paths.get(String.valueOf(this._ssl.booleanValue() ? "https" : "http") + "://api.voicerss.org/").toUri().toURL();
 /*  90 */     HttpURLConnection conn = (HttpURLConnection)url.openConnection();
 /*  91 */     conn.setRequestMethod("POST");
 /*  92 */     conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
